# Alchemy

./: .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  package.json  token-distribution-history.json.example
.github/workflows/: distribute.yml
automation/: cron-setup.sh
spell-system/: IMPLEMENTATION.md  POINTS_CALCULATION.md  README.md  SECURITY.md
spell-system/program/: Cargo.toml  lib.rs
spell-system/program/src/: lib.rs
spell-system/scripts/: initialize-spell-program.ts  spell-multiplier-reader.ts  spell-price-updater.ts  test-spell-system.ts
src/: collect-fees.ts  distribute-tokens.ts  swap-sol-to-gold.ts
