[package]
name = "alchemy-spells"
version = "0.1.0"
description = "Alchemy Spell System - Burn ALCH for runes, pay SOL for spellbooks, cast spells for buffs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alchemy_spells"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
